--- a/app/views/form_section/_date_range.html.erb
+++ b/app/views/form_section/_date_range.html.erb
@@ -2,6 +2,10 @@
    field_keys ||= []
    name = field_tag_name formObject, date_range, field_keys
    value_from, value_to = field_value formObject, date_range, field_keys
+   value_date_field = formObject[date_range[:name]] || ""
+   date_or_date_range = formObject["#{date_range[:name]}_date_or_date_range"] || "date_range"
+   value_from, value_to = ["", ""] if date_or_date_range == "date"
+   value_date_field = "" if date_or_date_range == "date_range"
 %>
 
 <div class="row">
@@ -11,10 +15,23 @@
     </span>
   </div>
   <div class="medium-8 columns">
-    <span><%="#{I18n.t("fields.date_range.from")}:"%></span>
-    <%= text_field_tag name.gsub(date_range[:name], "#{date_range[:name]}_from"), value_from, :class => 'form_date_field', :disabled => date_range.editable == false ? true : false %>
-    <span><%="#{I18n.t("fields.date_range.to")}:"%></span>
-    <%= text_field_tag name.gsub(date_range[:name], "#{date_range[:name]}_to"), value_to, :class => 'form_date_field', :disabled => date_range.editable == false ? true : false %>
-    <%= image_tag "new/icon_help.png", class: 'tool-tip-icon vtip', title: date_range.help_text.present? ? date_range.help_text: "(dd-mmm-yyyy)" %>
+    <div class="date_or_date_range_selector">
+      <% ["date", "date_range"].each do |option| %>
+        <% option_name = name.gsub(date_range[:name], "#{date_range[:name]}_date_or_date_range") %>
+        <%= radio_button_tag option_name, option, date_or_date_range == option%>
+        <%= label_tag "#{option_name}_#{option}", I18n.t("fields.date_range.#{option}") %>
+      <% end %>
+    </div>
+    <div class="date" style ="<%= "display:none;" if date_or_date_range == "date_range" %>">
+      <%= text_field_tag name, value_date_field, :class => 'form_date_field', :disabled => !date_range.editable %>
+      <%= image_tag "new/icon_help.png", class: 'tool-tip-icon vtip', title: date_range.help_text.present? ? date_range.help_text: "(dd-mmm-yyyy)" %>
+    </div>
+    <div class="date_range" style ="<%= "display:none;" if date_or_date_range == "date" %>">
+      <span><%="#{I18n.t("fields.date_range.from")}:"%></span>
+      <%= text_field_tag name.gsub(date_range[:name], "#{date_range[:name]}_from"), value_from, :class => 'form_date_field', :disabled => date_range.editable == false ? true : false %>
+      <span><%="#{I18n.t("fields.date_range.to")}:"%></span>
+      <%= text_field_tag name.gsub(date_range[:name], "#{date_range[:name]}_to"), value_to, :class => 'form_date_field', :disabled => date_range.editable == false ? true : false %>
+      <%= image_tag "new/icon_help.png", class: 'tool-tip-icon vtip', title: date_range.help_text.present? ? date_range.help_text: "(dd-mmm-yyyy)" %>
+    </div>
   </div>
 </div>
