--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -557,6 +557,16 @@ ul.links {
   li:last-of-type a {
       margin-right: 0;
   }
+
+  li:not(:last-child):after {
+    content: ("|");
+    margin-left: 5px;
+    color: #bbb;
+  }
+
+  li:first-of-type:after {
+    margin-left: 12px;
+  }
 }
 
 .inline-list > li {
