--- a/app/views/shared/_header_links.html.erb
+++ b/app/views/shared/_header_links.html.erb
@@ -1,11 +1,11 @@
 <ul class="links inline-list right">
   <% unless current_user.nil? %>
     <li><%= t("header.logged_in_as") %> <%= current_user.user_name %></li>
-    <li><%= link_with_confirm t("header.logout"), logout_path, id: "logout" %> |</li>
-    <li><%= link_with_confirm t("header.my_account"), user_path(current_user.id) %> |</li>
+    <li><%= link_with_confirm t("header.logout"), logout_path, id: "logout" %></li>
+    <li><%= link_with_confirm t("header.my_account"), user_path(current_user.id) %></li>
 
     <% if can?(:manage, ContactInformation) or can?(:highlight, Field) %>
-      <li><%= link_to t("header.system_settings"), admin_path %> |</li>
+      <li><%= link_to t("header.system_settings"), admin_path %></li>
     <% end %>
   <% end %>
 
