changed .status to .child_status in case index view

--- a/app/views/children/_summary_row.html.erb
+++ b/app/views/children/_summary_row.html.erb
@@ -40,7 +40,7 @@
       </td>
       <td>
         <div class="summary_item">
-          <%= child.status %>
+          <%= child.child_status %>
         </div>
       </td>
     </div>
