--- a/app/views/form_section/edit.html.erb
+++ b/app/views/form_section/edit.html.erb
@@ -9,6 +9,10 @@
       <h3><i><%= t("forms.cannot_be_edited") %></i></h3>
   <% end %>
   <div class="text_info"><%= t("form_section.messages.drag_drop_help_text").html_safe %></div>
+    <input type="hidden" id="toggle_url" value="<%= toggle_fields_form_section_fields_path(@form_section) %>">
+    <input type="hidden" id="edit_url" value="<%= edit_form_section_path(@form_section) %>">
+    <input type="hidden" id="move_url" value="<%= change_form_form_section_fields_path(@form_section) %>">
+    <input type="hidden" id="save_order_url" value="<%= save_order_form_section_fields_path(@form_section) %>">
     <table id="form_sections" class="list_table" width="940">
       <thead>
       <tr>
@@ -24,10 +28,6 @@
 
 
       <tbody>
-      <input type="hidden" id="toggle_url" value="<%= toggle_fields_form_section_fields_path(@form_section) %>">
-      <input type="hidden" id="edit_url" value="<%= edit_form_section_path(@form_section) %>">
-      <input type="hidden" id="move_url" value="<%= change_form_form_section_fields_path(@form_section) %>">
-      <input type="hidden" id="save_order_url" value="<%= save_order_form_section_fields_path(@form_section) %>">
       <% @form_section.fields.each do |field| %>
           <% unless field.new? %>
           <tr data="<%= field.name %>" class="<%= field.visible? ? "rowEnabled" : "rowDisabled" %>">
@@ -42,7 +42,8 @@
                     <%= check_box_tag "fields[]", field.name, !field.visible? , {:id => "fields_#{field.name}", :class => "field_hide_show"} %>
                   <% end %>
                 </td>
-
+            <% else %>
+             <td width="75" align="center"> </td>
             <% end %>
             <% if @form_section.editable? %>
             <td class='field-buttons' width="220">
@@ -60,6 +61,8 @@
                       </div>
                   <% end %>
                 </td>
+            <% else %>
+             <td class='field-buttons' width="220"> </td>
             <% end %>
           </tr>
          <% end %>
