Fixed date selector select boxes, upgraded data tables responsive. Had issue with FF. Removed scroll to top on sidebar nav.

--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -294,6 +294,11 @@ input[type="text"][disabled]{
   box-shadow: none;
 }
 
+#ui-datepicker-div select {
+  height: inherit;
+  font-size: .9rem
+}
+
 ////////////////////////////////////////////////
 // Fields
 ////////////////////////////////////////////////
