adding violation reload button

--- a/app/views/incidents/new.html.erb
+++ b/app/views/incidents/new.html.erb
@@ -16,6 +16,7 @@
         <% end %>
         <div class="btn_panel">
             <%= render 'children/reset_button'%>
+            <%= render 'incidents/reload_button'%>
             <%= submit_button %>
         </div>
       </div>
