PRIMERO-247 GBV-039As a Social Worker I want to password protect the survivor's name PRIMERO-248 GBV-040As a Social Worker I want to view or update the (hidden) survivor's name field Changes: Now the user does not need to enter any password to hide/unhide the survivor's name.   Changed labels and database fields from 'Password Protect' to 'Hide'.

--- a/app/views/children/_summary_row.html.erb
+++ b/app/views/children/_summary_row.html.erb
@@ -14,8 +14,8 @@
         <div class="summary_item">
         <% highlighted_fields.each do |relevant_field| %>
           <% if relevant_field.visible? %>
-            <% if relevant_field.password_protected_field && child.password_protected_name %>
-              <%= I18n.t("cases.password_protected_field_text") %>
+            <% if relevant_field.hidden_text_field && child.hidden_name %>
+              <%= I18n.t("cases.hidden_text_field_text") %>
             <% else %>
               <%= child[relevant_field[:name]] %>
             <% end %>
