--- a/app/views/children/index.html.erb
+++ b/app/views/children/index.html.erb
@@ -1,2 +1,1 @@
-<%= render 'record_shared/list_view_table', model: Child, record: 'case', 
-		fields: ['flag', 'id', 'name', 'age', 'sex', 'registration_date', 'status'] %>
+<%= render 'record_shared/list_view_table', model: Child, record: 'case', collection: @children %>
