Added back per page from data tables and wired with backend

--- a/app/views/record_shared/_cases_summary_row.html.erb
+++ b/app/views/record_shared/_cases_summary_row.html.erb
@@ -6,7 +6,7 @@
       <%= link_to text_to_identify_child(record), case_path(record), class: 'id_link' %>
       <% #content_tag(:div, nil, :class => 'flag reunited') if record.reunited? %>
   </td>
-  <td><%# index_highlighted_case_name(highlighted_fields, record) %></td>
+  <td><%= index_highlighted_case_name(@highlighted_fields, record) %></td>
   <td><%= record.age %></td>
   <td><%= record.sex %></td>
   <td><%= record.created_at %></td>
