--- a/app/views/shared/_pagination.html.erb
+++ b/app/views/shared/_pagination.html.erb
@@ -2,8 +2,9 @@
 <script type="text/javascript">
 	var pagination_details = {
 		info: "<%= page_entries_info results %>",
-		start: "<%=  results.offset %>",
-		total: "<%= total %>"
+		start: "<%= results.offset %>",
+		total: "<%= total %>",
+		per: "<%= per %>"
 	}
 </script>
 <% end %>
