PRIMERO-419 create a Tracing Request model. Added Model, Controllers, Views templates (Index, Show, Edit, New, History).

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,6 +42,9 @@
           <% if can? :read, Child %>
             <li><%= link_to t("navigation.cases"), cases_path %></li>
           <% end  %>
+          <% if can? :read, TracingRequest %>
+            <li><%= link_to t("navigation.tracing_request"), tracing_requests_path %></li>
+          <% end  %>
           <% if can? :read, Incident %>
             <li><%= link_to t("navigation.incidents"), incidents_path %></li>
           <% end  %>
