--- a/app/views/record_shared/_list_view_table.html.erb
+++ b/app/views/record_shared/_list_view_table.html.erb
@@ -28,8 +28,8 @@
     <table width="100%" class="record_list_view" cellpadding="0" cellspacing="0">
       <thead>
         <tr>
-          <% list_view_header(record).each do |field| %>
-          <th>
+          <% list_view_header(record).each_with_index do |field, i| %>
+          <th aria-field="<%= field %>" aria-field-index="<%= i %>">
             <%= field == 'flag' ? icon('flag') : t("#{record}.#{field}") %>
           </th>
           <% end %>
