--- a/app/views/form_section/_select_box.html.erb
+++ b/app/views/form_section/_select_box.html.erb
@@ -1,6 +1,7 @@
 <%
    field_keys ||= []
    name = field_tag_name formObject, select_box, field_keys
+   name += "[]" if select_box.multi_select   
    value ||= field_value formObject, select_box, field_keys
 %>
 
@@ -12,7 +13,7 @@
   </div>
   <div class="medium-8 columns">
     <% if select_box.multi_select %>
-      <%= select_tag name+"[]", options_for_select(select_box.select_options(formObject), value), 'multiple' => '', 'class' => 'chosen-select', 'data-placeholder' => t("fields.chosen_placeholder") %>
+      <%= select_tag name, options_for_select(select_box.select_options(formObject), value), 'multiple' => '', 'class' => 'chosen-select', 'data-placeholder' => t("fields.chosen_placeholder") %>
     <% else %>
       <%= select_tag name, options_for_select(select_box.select_options(formObject), value) %>
     <% end %>
