--- a/app/views/tracing_requests/_header.html.erb
+++ b/app/views/tracing_requests/_header.html.erb
@@ -1,3 +1,4 @@
+<% #TODO this will be refactored in solr branch. %>
 <h1 class="no_border float_left"><%= t("tracing_requests.label") %></h1>
 <% if can? :create, TracingRequest %>
   <%= link_to content_tag(:span, t("tracing_requests.register_new_tracing_request"), :class => 'create_tracing_request'), new_tracing_request_path, :class=>'btn green-button right' %>
