--- a/app/views/record_shared/_list_view_table.html.erb
+++ b/app/views/record_shared/_list_view_table.html.erb
@@ -29,8 +29,8 @@
       <thead>
         <tr>
           <% list_view_header(record).each_with_index do |field, i| %>
-          <th aria-field="<%= field %>" aria-field-index="<%= i %>">
-            <%= field == 'flag' ? icon('flag') : t("#{record}.#{field}") %>
+          <th aria-field="<%= field[:sort_title] %>" aria-field-index="<%= i %>">
+            <%= field[:title] ? t("#{record}.#{field[:title]}") : "" %>
           </th>
           <% end %>
         </tr>
