managing violation id

--- a/app/views/incidents/edit.html.erb
+++ b/app/views/incidents/edit.html.erb
@@ -34,6 +34,7 @@
       <% end %>
       <div class="btn_panel">
         <%= discard_button incidents_path %>
+        <%= render 'incidents/reload_button'%>
         <%= submit_button %>
         <div class="clearfix"></div>
       </div>
