--- a/app/views/form_section/_numeric_field.html.erb
+++ b/app/views/form_section/_numeric_field.html.erb
@@ -2,10 +2,10 @@
   field_keys ||= []
   name = field_tag_name formObject, numeric_field, field_keys
   value ||= field_value formObject, numeric_field, field_keys
-  klass = ""
+  field_class = ""
   autosum_group = ""
-  klass += " autosum" if numeric_field["autosum"] == true
-  klass += " autosum_total" if numeric_field["autosum_total"] == true
+  field_class += " autosum" if numeric_field["autosum_group"].present? && numeric_field['autosum_total'].blank?
+  field_class += " autosum_total" if numeric_field["autosum_total"] == true
   autosum_group += numeric_field["autosum_group"]
 %>
 <div class="row">
@@ -15,7 +15,8 @@
     </span>
   </div>
   <div class="medium-8 columns">
-    <%= text_field_tag name, value, :class => klass.strip, :autosum_group => autosum_group.strip, :disabled => numeric_field.editable == false ? true : false %>
+    <% # NOTE: The field is readonly instead of disabled in order to send the calculated value to the server so we don't have to look for the list of autosum fields in the formsection and calculate again because it is an expensive task. %>
+    <%= text_field_tag name, value, :class => field_class.strip, :autosum_group => autosum_group.strip, :disabled => numeric_field.editable == false ? true : false, :readonly => numeric_field['autosum_total'] %>
     <%= image_tag "new/icon_help.png", title: numeric_field.help_text, class: 'tool-tip-icon vtip' if numeric_field.help_text.present? %>
   </div>
 </div>
