Removed searchable from tracing request, added solr start and reindex to cookbook

--- a/cookbook/templates/default/sunspot.yml.erb
+++ b/cookbook/templates/default/sunspot.yml.erb
@@ -2,6 +2,8 @@
 <%= env %>:
   solr:
     hostname: <%= @hostnames[env] %>
-    port: <%= @ports[env]  %>
+    port: 8983
     log_level: <%= @log_levels[env] %>
+    pid_dir: tmp/pids
+    path: /solr/<%= env %>
 <% end %>
