--- a/app/views/form_section/_field_display_subform.html.erb
+++ b/app/views/form_section/_field_display_subform.html.erb
@@ -28,7 +28,9 @@
                            }
         %>
         <% (subform_section.fields.select {|field| field.visible? }).each do |field| %>
-          <%= render :partial => "form_section/field_display_#{field.display_type}",  :locals=>{:field => field, :formObject=>formObject_i} %>
+          <% unless field.display_type == 'hidden' %>
+            <%= render :partial => "form_section/field_display_#{field.display_type}",  :locals=>{:field => field, :formObject=>formObject_i} %>
+          <% end %>
         <% end %>
         </fieldset>
       </div>
