--- a/app/views/form_section/_show_form_section.html.erb
+++ b/app/views/form_section/_show_form_section.html.erb
@@ -6,7 +6,9 @@
       <%= render :partial => "form_section/form_section_info", :locals => {:form_section => section} %>
       <hr>
       <% (section.fields.select{|field| field.visible?}).each do |field| %>
-        <%= render :partial => "form_section/field_display_#{field.display_type}",  :locals=>{:field => field, :formObject=>formObject, :form_group_name => form_group_name, :display_audio_delete_checkbox => false} %>
+        <% unless field.display_type == 'hidden' %>
+          <%= render :partial => "form_section/field_display_#{field.display_type}",  :locals=>{:field => field, :formObject=>formObject, :form_group_name => form_group_name, :display_audio_delete_checkbox => false} %>
+        <% end %>
       <% end %>
     </fieldset>
   <% end %>
