Anchor the Header

--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -39,6 +39,14 @@ $secondary-bg: $grey_color;
 $button-font-color: $green_color;
 
 ////////////////////////////////////////////////
+// Foundation - Topbar overrides
+////////////////////////////////////////////////
+$nav_height: 50px;
+$topbar-height: $nav_height;
+$topbar-link-color: #fff !important;
+
+
+////////////////////////////////////////////////
 // Import Foundation!
 ////////////////////////////////////////////////
 @import "foundation";
