--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -265,9 +265,9 @@ input:focus{
 input[type="text"],
 input[type="password"] {
   width:100%;
-  color: $grey_color !important;
-  border: 1px solid $grey_color !important;
-  background: #FFF !important;
+  color: $grey_color;
+  border: 1px solid $grey_color;
+  background: #FFF;
 }
 
 input[type="submit"] {
@@ -541,7 +541,7 @@ fieldset .row:nth-child(even) h5.tool-tip-label span {
 }
 
 ////////////////////////////////////////////////
-// Topbar
+// Header
 ////////////////////////////////////////////////
 
 header {
@@ -587,22 +587,52 @@ ul.links {
 // Navbar
 ////////////////////////////////////////////////
 
-.main_bar {
-  background: $grey_color;
+.contain-to-grid {
+  height: $nav_height;
+}
+
+.top-bar {
   text-transform: uppercase;
   a {
     color: $white_color;
+
+    &:hover {
+      text-decoration: none;
+    }
+  }
+  
+  button {
+    font-size: 1.5rem;
+  }
+
+  input, button {
+    top: 0;
+    height: $nav_height;
+    background: $grey_color;
+    border: none;
+    border-top: 1px solid #333;
+    border-bottom: 1px solid #333;
+    color: #fff;
+
+    &:first-child {
+      border-right: 1px solid #333;
+    }
+
+    &:focus {
+      background: #ccc;
+      color: $grey_color;
+    }
+  }
+
+  .top-bar-section .has-form {
+    padding: 0;
   }
 }
 
 nav {
   ul {
-    text-align: justify;
     font-size:  0.875rem;
     list-style-type: none;
-    margin: 0;
-    padding: 0.75rem 0;
-    height: 3.25rem;
     font-weight: normal;
 
     &:after {
@@ -613,10 +643,22 @@ nav {
     }
 
     li {
-      //padding: 5px 30px 5px 0;
       display: inline-block;
+      
       &:last-child {
         padding-right:0;
+      }
+
+      &:first-child:not(.has-form) {
+        border-left: solid 1px #4e4e4e;
+      }
+
+      &:not(.has-form) {
+        border-right: solid 1px #4e4e4e;
+      }
+
+      &.hash-form {
+        border-right: none;
       }
     }
   }
@@ -759,7 +801,7 @@ nav {
 
     &:hover {
       color: #fff !important;
-      background: $grey_color;
+      background: $grey_color !important;
       text-decoration: none;
     }
   }
