--- a/app/views/tracing_requests/index.html.erb
+++ b/app/views/tracing_requests/index.html.erb
@@ -1,38 +1,1 @@
-<div class="row">
-  <div class="large-12 columns">
-    <%= render :partial => "tracing_requests/header" %>
-    <div class="clearfix"></div>
-
-    <div class="scope_bar">
-      <div class="row">
-        <div class="large-6 medium-6 columns">
-          <form class="tracing_requests_scope_bar_form">
-            <ul class="inline-list">
-              <%= render :partial => "tracing_requests/scopes" %>
-            </ul>
-          </form>
-        </div>
-      </div>
-    </div>
-
-    <table width="100%" class="list_view" cellpadding=0 cellspacing=0>
-      <thead>      
-        <tr>
-          <th class="id_column">
-            <%= t("tracing_request.id") %>
-          </th>
-          <th>
-            <%= t("tracing_request.enquirer_name") %>
-          </th>
-          <th>
-            <%= t("tracing_request.enquirer_date") %>
-          </th>
-        </tr>
-      </thead>
-      <tbody><%= render :partial => "tracing_requests/summary_row", :collection => @tracing_requests, :as => :tracing_request, :locals => { :checkbox => false, :highlighted_fields => FormSection.sorted_highlighted_fields  }  %></tbody>
-    </table>
-
-    <%= render :partial => 'shared/pagination', :locals => { :results => @tracing_requests } %>
-  </div>
-</div>
-
+<%= render 'record_shared/list_view_table', model: TracingRequest, record: 'tracing_request', collection: @tracing_requests %>
