--- a/app/views/children/edit.html.erb
+++ b/app/views/children/edit.html.erb
@@ -21,22 +21,24 @@
 <div class="clearfix"></div>
 
 <%= form_tag child_path(@child), :method => :put, :multipart => true, :class => "edit-profile default-form" do %>
-  <div class="page-content-new row">
+  <div class="page-content-new row collapse" data-equalizer>
     <div class="large-4 medium-4 columns close-side-tab">
-      <div class="side-tab">
+      <div class="side-tab" data-equalizer-watch>
         <%= render :partial => 'form_section/tabs', :object => @form_sections %>
       </div>
     </div>
 
-    <div class="side-tab-content large-8 medium-8 columns">
-      <%= hidden_field_tag('child[revision]', @child._rev) %>
-      <% @form_sections.each do |form_group_name, form_list| %>
-        <%= render :partial => 'form_section/form_section', :collection => form_list,  :locals => {:formObject => @child, :form_group_name => form_group_name} %>
-      <% end %>
-      <div class="btn_panel">
-        <%= discard_button children_path %>
-        <%= submit_button %>
-        <div class="clearfix"></div>
+    <div class="large-8 medium-8 columns">
+      <div class="side-tab-content" data-equalizer-watch>
+        <%= hidden_field_tag('child[revision]', @child._rev) %>
+        <% @form_sections.each do |form_group_name, form_list| %>
+          <%= render :partial => 'form_section/form_section', :collection => form_list,  :locals => {:formObject => @child, :form_group_name => form_group_name} %>
+        <% end %>
+        <div class="btn_panel">
+          <%= discard_button children_path %>
+          <%= submit_button %>
+          <div class="clearfix"></div>
+        </div>
       </div>
     </div>
 
