--- a/app/views/incidents/show.html.erb
+++ b/app/views/incidents/show.html.erb
@@ -67,16 +67,17 @@ $(".profile-tools .investigated a").click( function(){
     <%= stylesheet_link_tag "jquery.lightbox-0.5" %>
 <% end %>
     
-<div class="page-content-new row">
+<div class="page-content-new row collapse" data-equalizer>
   <div class="large-4 medium-4 columns close-side-tab">
-    <div class="side-tab">
+    <div class="side-tab" data-equalizer-watch>
       <%= render :partial => 'form_section/tabs', :object => @form_sections %>
     </div>
   </div>
-  <div class="side-tab-content large-8 medium-8 columns">
-    <div class="clearfix"></div>
-    <%# Removed for demo deploy %>
-    <%= render :partial => 'shared/sidebar' if false %>
-    <%= render :partial => 'form_section/show_form_section', :locals => {:formObject => @incident} %>
+  <div class="large-8 medium-8 columns">
+    <div class="side-tab-content" data-equalizer-watch>
+      <%# Removed for demo deploy %>
+      <%= render :partial => 'shared/sidebar' if false %>
+      <%= render :partial => 'form_section/show_form_section', :locals => {:formObject => @incident} %>
+    </div>
   </div>
 </div>
