--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -10,10 +10,10 @@
                   <%= form_tag search_children_path, :method => :get, :id => "search_form" do %>
                     <div class="row collapse">
                       <% #link_to t("navigation.advanced_search"), new_advanced_search_path %>
-                      <div class="large-9 small-10 columns">
+                      <div class="large-10 small-11 columns">
                         <%= text_field_tag 'query', params[:query], placeholder: 'SEARCH' %>
                       </div>
-                      <div class="large-3 small-2 columns">
+                      <div class="large-2 small-1 columns">
                         <%= button_tag  :action => "children/search", :method => "get", :onclick => "return RapidFTR.validateSearch();" do %>
                         <%= icon('angle-right') %>
                         <% end %>
@@ -24,15 +24,15 @@
               <% end %>
             </ul>
             <ul class="left">
-              <li><%= link_to t("navigation.home"), root_path %></li>
+              <li><%= link_to t("navigation.home"), root_path, class: current_page(root_path) %></li>
               <% if can? :read, TracingRequest %>
-                <li><%= link_to t("navigation.tracing_request"), tracing_requests_path %></li>
+                <li><%= link_to t("navigation.tracing_request"), tracing_requests_path, class: current_page(tracing_requests_path) %></li>
               <% end  %>
               <% if can? :read, Child %>
-                <li><%= link_to t("navigation.cases"), cases_path %></li>
+                <li><%= link_to t("navigation.cases"), cases_path, class: current_page(cases_path) %></li>
               <% end  %>
               <% if can? :read, Incident %>
-                <li><%= link_to t("navigation.incidents"), incidents_path %></li>
+                <li><%= link_to t("navigation.incidents"), incidents_path, class: current_page(incidents_path) %></li>
               <% end  %>
               <% if false %>
                 <% if current_user_name==nil or can? :manage, FormSection %>
@@ -46,7 +46,7 @@
                 <% end %>
               <% end %>
               <% if can? :read, Report%>
-                <li><%= link_to t("navigation.reports"), reports_path %></li>
+                <li><%= link_to t("navigation.reports"), reports_path, class: current_page(reports_path) %></li>
               <% end %>
             </ul>
           </section>
