--- a/app/views/incidents/_header_message.html.erb
+++ b/app/views/incidents/_header_message.html.erb
@@ -1,25 +1,36 @@
-<div class="header_message">
+<div class="panel">
+  <div class="header_message">
     <% if incident.reunited? %>
         <div class="reunited-message"><%= reunited_message %></div>
     <% end %>
     <% if incident.flag? %>
-        <h3 class="flag-message"><%= flag_message %></h3>
+        <p class="flag-message"><%= flag_message %></p>
     <% end %>
     <% if incident.duplicate? %>
-        <h3 class="duplicate-message"><%= duplicate_message %></h3>
+        <p class="duplicate-message"><%= duplicate_message %></p>
     <% end %>
     <% unless duplicates.empty? %>
-        <h3 class="duplicate-message"><%= t("incident.another_duplicate_before_link") %>
-        <%= link_to 'here', incident_path(duplicates.first) %><%= t("incident.another_duplicate_after_link") %></h3>
+        <p class="duplicate-message"><%= t("incident.another_duplicate_before_link") %>
+        <%= link_to 'here', incident_path(duplicates.first) %><%= t("incident.another_duplicate_after_link") %></p>
     <% end %>
 
     <div id='interviewer_details'>
-        <h3><%= t("incident.registered_by") %>: <%= incident['created_by'] %> <%= link_to_incident_update_info(incident) %> <%= t("preposition.on_label") %> <%= current_user.localize_date(incident['created_at']) %></h3>
+      <p><strong><%= t("incident.registered_by") %></strong><br>
+        <%= incident['created_by'] %> <%= link_to_incident_update_info(incident) %><br>
+        <%= current_user.localize_date(incident['created_at']) %>
+      </p>
         <% if incident['last_updated_at']%>
-            <h3><%= t("incident.last_updated") %>: <%= current_user.localize_date(incident['last_updated_at']) %> </h3>
+          <p>
+            <strong><%= t("incident.last_updated") %></strong><br>
+            <%= current_user.localize_date(incident['last_updated_at']) %> 
+          </p>
         <% end %>
         <% if incident['posted_from']=="Mobile" %>
-            <h3><%= t("incident.posted_from_mobile")  %> <%= current_user.localize_date(incident['posted_at']) %> </h3>
+          <p>
+            <strong><%= t("incident.posted_from_mobile")  %></strong><br>
+            <%= current_user.localize_date(incident['posted_at']) %>
+          </p>
         <% end %>
     </div>
-</div>  
+  </div>
+</div>
