--- a/app/views/tracing_requests/_header_message.html.erb
+++ b/app/views/tracing_requests/_header_message.html.erb
@@ -1,25 +1,31 @@
-<div class="header_message">
-    <% if tracing_request.reunited? %>
-        <div class="reunited-message"><%= reunited_message %></div>
-    <% end %>
-    <% if tracing_request.flag? %>
-        <h3 class="flag-message"><%= flag_message %></h3>
-    <% end %>
-    <% if tracing_request.duplicate? %>
-        <h3 class="duplicate-message"><%= duplicate_message %></h3>
-    <% end %>
-    <% unless duplicates.empty? %>
-        <h3 class="duplicate-message"><%= t("tracing_request.another_duplicate_before_link") %>
-        <%= link_to 'here', tracing_request_path(duplicates.first) %><%= t("tracing_request.another_duplicate_after_link") %></h3>
-    <% end %>
+<div class="panel">
+    <div class="header_message">
+        <% if tracing_request.reunited? %>
+            <div class="reunited-message"><%= reunited_message %></div>
+        <% end %>
+        <% if tracing_request.flag? %>
+            <h3 class="flag-message"><%= flag_message %></h3>
+        <% end %>
+        <% if tracing_request.duplicate? %>
+            <h3 class="duplicate-message"><%= duplicate_message %></h3>
+        <% end %>
+        <% unless duplicates.empty? %>
+            <h3 class="duplicate-message"><%= t("tracing_request.another_duplicate_before_link") %>
+            <%= link_to 'here', tracing_request_path(duplicates.first) %><%= t("tracing_request.another_duplicate_after_link") %></h3>
+        <% end %>
 
-    <div id='interviewer_details'>
-        <h3><%= t("tracing_request.registered_by") %>: <%= tracing_request['created_by'] %> <%= link_to_tracing_request_update_info(tracing_request) %> <%= t("preposition.on_label") %> <%= current_user.localize_date(tracing_request['created_at']) %></h3>
-        <% if tracing_request['last_updated_at']%>
-            <h3><%= t("tracing_request.last_updated") %>: <%= current_user.localize_date(tracing_request['last_updated_at']) %> </h3>
-        <% end %>
-        <% if tracing_request['posted_from']=="Mobile" %>
-            <h3><%= t("tracing_request.posted_from_mobile")  %> <%= current_user.localize_date(tracing_request['posted_at']) %> </h3>
-        <% end %>
+        <div id='interviewer_details'>
+            <p><strong><%= t("tracing_request.registered_by") %></strong><br>
+             <%= tracing_request['created_by'] %> <%= link_to_tracing_request_update_info(tracing_request) %> 
+             <%= current_user.localize_date(tracing_request['created_at']) %></p>
+            <% if tracing_request['last_updated_at']%>
+                <p><strong><%= t("tracing_request.last_updated") %></strong><br>
+                <%= current_user.localize_date(tracing_request['last_updated_at']) %> </p>
+            <% end %>
+            <% if tracing_request['posted_from']=="Mobile" %>
+                <p><strong><%= t("tracing_request.posted_from_mobile")  %></strong><br>
+                <%= current_user.localize_date(tracing_request['posted_at']) %> </p>
+            <% end %>
+        </div>
     </div>
 </div>
