--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -481,6 +481,44 @@ fieldset .row:nth-child(even) h5.tool-tip-label span {
   background: #ebebeb;
 }
 
+
+////////////////////////////////////////////////
+// Record Controls
+////////////////////////////////////////////////
+
+.record_controls {
+  padding-top: 20px;
+
+  ul.inline-list {
+    padding-left: 5px;
+
+    li:not(.rec_ctl) {
+      margin-right: 10px;
+    }
+
+    a.arrow:after {
+      content: '\25BA';
+      float: right;
+      padding: 0 0 0 15px;
+      position: absolute;
+      z-index: 10;
+      color: $green_color;
+    }
+  }
+}
+
+.record_controls_container {
+  width: 100%;
+  height: 80px;
+  z-index: 9999;
+  background: $white_color;
+}
+
+.sticking {
+  -webkit-box-shadow: 0 2px 2px 0 rgba(0,0,0,.2);
+  box-shadow: 0 2px 2px 0 rgba(0,0,0,.2);
+}
+
 ////////////////////////////////////////////////
 // Advanced Search box
 ////////////////////////////////////////////////
