--- a/app/views/children/edit.html.erb
+++ b/app/views/children/edit.html.erb
@@ -1,13 +1,13 @@
-<% content_for :header_sub_nav do %>
-    <ul class="inline-list">
-        <%= render 'show_child_toolbar', child: @child %>
-    </ul>
+<% content_for :record_sub_nav do %>
+  <%= render 'show_child_toolbar', child: @child %>
+<% end %>
+
+<% content_for :record_sub_nav_controls do %>
+  <%= render 'record_toolbar', child: @child %>  
 <% end %>
 
 <% content_for :breadcrumbs do %>
-    <h2 class="float_left no_border">
-        <%= link_to t("cases.label"), cases_path %> &gt; <%= text_to_identify_child(@child) %>
-    </h2>
+    <%= t("case.label") %> #<%= text_to_identify_child(@child) %>
 <% end %>
 
 <% content_for :header_message do %>    
@@ -34,11 +34,6 @@
         <% @form_sections.each do |form_group_name, form_list| %>
           <%= render :partial => 'form_section/form_section', :collection => form_list,  :locals => {:formObject => @child, :form_group_name => form_group_name} %>
         <% end %>
-        <div class="btn_panel">
-          <%= discard_button children_path %>
-          <%= submit_button %>
-          <div class="clearfix"></div>
-        </div>
       </div>
     </div>
 
