--- a/app/views/children/new.html.erb
+++ b/app/views/children/new.html.erb
@@ -1,7 +1,12 @@
 <% content_for :breadcrumbs do %>
-  <h2><%= link_to t("cases.label"), cases_path %> &gt; <%= t("cases.register_new_case") %></h2>
+  <%= t("cases.register_new_case") %>
 <% end %>
-<%= form_tag children_path, :multipart => true do %>
+
+<% content_for :record_sub_nav_controls do %>
+  <%= render 'record_toolbar', child: @child %> 
+<% end %>
+
+<%= form_tag children_path, :multipart => true, :class => "default-form" do %>
     <div class="page-content-new row collapse" data-equalizer>
   	<%= hidden_field_tag "child[posted_from]", "Browser" %>
       <div class="large-4 medium-4 columns close-side-tab">
@@ -14,10 +19,6 @@
           <% @form_sections.each do |form_group_name, form_list| %>
             <%= render :partial => 'form_section/form_section', :collection => form_list,  :locals => {:formObject => @child, :form_group_name => form_group_name} %>
           <% end %>
-          <div class="btn_panel">
-              <%= render 'reset_button'%>
-              <%= submit_button %>
-          </div>
         </div>
       </div>
     </div>    
