--- a/app/views/incidents/edit.html.erb
+++ b/app/views/incidents/edit.html.erb
@@ -1,13 +1,13 @@
-<% content_for :header_sub_nav do %>
-    <ul class="inline-list">
-        <%= render 'show_incident_toolbar', incident: @incident %>
-    </ul>
+<% content_for :record_sub_nav_controls do %>
+  <%= render 'record_toolbar', incident: @incident %> 
+<% end %>
+
+<% content_for :record_sub_nav do %>
+  <%= render 'show_incident_toolbar', incident: @incident %>
 <% end %>
 
 <% content_for :breadcrumbs do %>
-    <h2 class="float_left no_border">
-        <%= link_to t("incidents.label"), incidents_path %> &gt; <%= text_to_identify_incident(@incident) %>
-    </h2>
+  <%= t("incidents.label") %>: <%= text_to_identify_incident(@incident) %>
 <% end %>
 
 <% content_for :header_message do %>    
@@ -33,11 +33,6 @@
         <% @form_sections.each do |form_group_name, form_list| %>
           <%= render :partial => 'form_section/form_section', :collection => form_list,  :locals => {:formObject => @incident, :form_group_name => form_group_name} %>
         <% end %>
-        <div class="btn_panel">
-          <%= discard_button incidents_path %>
-          <%= submit_button %>
-          <div class="clearfix"></div>
-        </div>
       </div>
     </div>
 
